Fix long bar name overlap in detail header and specials cards

--- a/css/screen-bar-detail.css
+++ b/css/screen-bar-detail.css
@@ -34,6 +34,16 @@
   text-transform: uppercase;
 }
 
+#detail-name {
+  display: block;
+  padding: 0 56px;
+  width: 100%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .detail-header .back-button {
   position: absolute;
   left: 16px;
